<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/xn_report_str"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/userid_fetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/userid_query_hint" />

        <Button
            android:id="@+id/litter_data_fetch_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_litter_data_fetch_clean_str" />

        <Button
            android:id="@+id/litter_data_fetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_litter_data_fetch_str" />
    </LinearLayout>

    <include
        android:id="@+id/bolck_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/litterdata_title_layout" />

    <ListView
        android:id="@+id/lv_litter_data_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

</LinearLayout>